change configuration config

--- a/package.json
+++ b/package.json
@@ -58,21 +58,27 @@
     "@sentry/node": "^6.19.3",
     "@sentry/tracing": "^6.19.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "express-graphql": "^0.12.0",
     "express-validator": "^6.14.2",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "jet-logger": "^1.1.5",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
-    "mongoose": "^6.2.9",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.4.2",
+    "morgan": "^1.10.0",
+    "npm": "^8.13.2",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -92,7 +98,7 @@
     "fs-extra": "^10.0.1",
     "jasmine": "^4.0.2",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.2",
+    "supertest": "^6.2.3",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
