--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@sentry/tracing": "^6.19.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "command-line-args": "^5.2.1",
@@ -73,12 +74,15 @@
     "http-status-codes": "^2.2.0",
     "jet-logger": "^1.1.5",
     "jsonfile": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "npm": "^8.13.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -90,7 +94,9 @@
     "@types/jsonfile": "^6.1.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
